--- a/appsources/SafeCrash/package.json
+++ b/appsources/SafeCrash/package.json
@@ -24,8 +24,8 @@
       "cordova-plugin-splashscreen": {}
     },
     "platforms": [
-      "android",
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
