--- a/appsources/SafeCrash/package.json
+++ b/appsources/SafeCrash/package.json
@@ -14,16 +14,20 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^9.1.0",
+    "cordova-background-timer": "0.0.4",
     "cordova-ios": "^6.2.0",
+    "cordova-plugin-background-mode": "git+https://github.com/sercatven/cordova-plugin-background-mode.git",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-dialogs": "^2.0.2",
+    "cordova-plugin-foreground-service": "^1.1.3",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-vibration": "^3.1.1",
-    "cordova-plugin-whitelist": "^1.3.4"
+    "cordova-plugin-whitelist": "^1.3.4",
+    "normal": "^0.1.1"
   },
   "cordova": {
     "plugins": {
@@ -36,7 +40,10 @@
       "cordova-plugin-console": {},
       "cordova-plugin-device": {},
       "cordova-plugin-file": {},
-      "cordova-plugin-sqlite-2": {}
+      "cordova-plugin-sqlite-2": {},
+      "cordova-background-timer": {},
+      "cordova-plugin-foreground-service": {},
+      "cordova-plugin-background-mode": {}
     },
     "platforms": [
       "ios",
@@ -44,6 +51,7 @@
     ]
   },
   "dependencies": {
+    "cordova-plugin-background-mode-fixed": "^0.7.9",
     "cordova-plugin-file": "6.0.2",
     "cordova-plugin-sqlite-2": "1.0.6",
     "pouchdb": "^7.2.2",
