--- a/appsources/SafeCrash/package.json
+++ b/appsources/SafeCrash/package.json
@@ -18,6 +18,7 @@
     "cordova-ios": "^6.2.0",
     "cordova-plugin-background-mode": "git+https://github.com/sercatven/cordova-plugin-background-mode.git",
     "cordova-plugin-badge": "^0.8.8",
+    "cordova-plugin-ble-central": "^1.3.1",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.3",
@@ -27,6 +28,7 @@
     "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.4",
+    "cordova-sms-plugin": "git+https://github.com/cordova-sms/cordova-sms-plugin.git",
     "normal": "^0.1.1"
   },
   "cordova": {
@@ -43,7 +45,12 @@
       "cordova-plugin-sqlite-2": {},
       "cordova-background-timer": {},
       "cordova-plugin-foreground-service": {},
-      "cordova-plugin-background-mode": {}
+      "cordova-plugin-background-mode": {},
+      "cordova-sms-plugin": {},
+      "cordova-plugin-ble-central": {
+        "IOS_INIT_ON_LOAD": "true",
+        "BLUETOOTH_USAGE_DESCRIPTION": " "
+      }
     },
     "platforms": [
       "ios",
