--- a/appsources/SafeCrash/package.json
+++ b/appsources/SafeCrash/package.json
@@ -16,7 +16,10 @@
     "cordova-android": "^9.1.0",
     "cordova-background-timer": "0.0.4",
     "cordova-ios": "^6.2.0",
-    "cordova-plugin-background-mode": "git+https://github.com/sercatven/cordova-plugin-background-mode.git",
+    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx-adapter": "^1.1.3",
+    "cordova-plugin-autostart": "git+https://github.com/ToniKorin/cordova-plugin-autostart.git",
+    "cordova-plugin-background-mode": "git+https://bitbucket.org/TheBosZ/cordova-plugin-run-in-background.git",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-ble-central": "^1.3.1",
     "cordova-plugin-console": "^1.1.0",
@@ -45,12 +48,15 @@
       "cordova-plugin-sqlite-2": {},
       "cordova-background-timer": {},
       "cordova-plugin-foreground-service": {},
-      "cordova-plugin-background-mode": {},
       "cordova-sms-plugin": {},
       "cordova-plugin-ble-central": {
         "IOS_INIT_ON_LOAD": "true",
         "BLUETOOTH_USAGE_DESCRIPTION": " "
-      }
+      },
+      "cordova-plugin-autostart": {},
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-androidx": {},
+      "cordova-plugin-androidx-adapter": {}
     },
     "platforms": [
       "ios",
