--- a/appsources/SafeCrash/package.json
+++ b/appsources/SafeCrash/package.json
@@ -16,6 +16,7 @@
     "cordova-android": "^9.1.0",
     "cordova-background-timer": "0.0.4",
     "cordova-ios": "^6.2.0",
+    "cordova-plugin-android-permissions": "^1.1.2",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
     "cordova-plugin-autostart": "git+https://github.com/ToniKorin/cordova-plugin-autostart.git",
@@ -27,6 +28,7 @@
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-dialogs": "^2.0.2",
     "cordova-plugin-foreground-service": "^1.1.3",
+    "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
     "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-vibration": "^3.1.1",
@@ -54,9 +56,13 @@
         "BLUETOOTH_USAGE_DESCRIPTION": " "
       },
       "cordova-plugin-autostart": {},
-      "cordova-plugin-background-mode": {},
       "cordova-plugin-androidx": {},
-      "cordova-plugin-androidx-adapter": {}
+      "cordova-plugin-androidx-adapter": {},
+      "cordova-plugin-android-permissions": {},
+      "cordova-plugin-background-mode": {},
+      "cordova-plugin-geolocation": {
+        "GPS_REQUIRED": "true"
+      }
     },
     "platforms": [
       "ios",
