--- a/appsources/SafeCrash/package.json
+++ b/appsources/SafeCrash/package.json
@@ -30,6 +30,7 @@
     "cordova-plugin-foreground-service": "^1.1.3",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-local-notification": "^0.9.0-beta.2",
+    "cordova-plugin-media": "^5.0.3",
     "cordova-plugin-splashscreen": "^6.0.0",
     "cordova-plugin-vibration": "^3.1.1",
     "cordova-plugin-whitelist": "^1.3.4",
@@ -62,6 +63,9 @@
       "cordova-plugin-background-mode": {},
       "cordova-plugin-geolocation": {
         "GPS_REQUIRED": "true"
+      },
+      "cordova-plugin-media": {
+        "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
       }
     },
     "platforms": [
