--- a/appsources/SafeCrash/package.json
+++ b/appsources/SafeCrash/package.json
@@ -23,6 +23,7 @@
     "cordova-plugin-background-mode": "git+https://bitbucket.org/TheBosZ/cordova-plugin-run-in-background.git",
     "cordova-plugin-badge": "^0.8.8",
     "cordova-plugin-ble-central": "^1.3.1",
+    "cordova-plugin-bluetoothle": "^6.3.1",
     "cordova-plugin-console": "^1.1.0",
     "cordova-plugin-contacts": "^3.0.1",
     "cordova-plugin-device": "^2.0.3",
@@ -66,7 +67,8 @@
       },
       "cordova-plugin-media": {
         "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
-      }
+      },
+      "cordova-plugin-bluetoothle": {}
     },
     "platforms": [
       "ios",
