--- a/appsources/SafeCrash/package.json
+++ b/appsources/SafeCrash/package.json
@@ -14,6 +14,7 @@
   "license": "Apache-2.0",
   "devDependencies": {
     "cordova-android": "^9.1.0",
+    "cordova-android-scrollbar": "^0.2.1",
     "cordova-background-timer": "0.0.4",
     "cordova-ios": "^6.2.0",
     "cordova-plugin-android-permissions": "^1.1.2",
