--- a/appsources/SafeCrash/platforms/android/gradle.properties
+++ b/appsources/SafeCrash/platforms/android/gradle.properties
@@ -264,5 +264,15 @@ android.useAndroidX=false
 android.enableJetifier=false
 android.useAndroidX=false
 android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
+android.useAndroidX=false
+android.enableJetifier=false
 android.useAndroidX=true
 android.enableJetifier=true
